# SecondYear

./: main.cpp  matrix.h  stack.h
BeginTask-0/: ArrayHandler.h  CMakeLists.txt  Stack.h  Table.h
BitField-2/: BitField.cpp  BitField.h  Set.cpp  main1.cpp
Stack/: CMakeLists.txt  CorrectChecker.cpp  CorrectChecker.h  Formula.h  Stack.h  Table.h  main  main.cpp
matrix/: CMakeLists.txt  main  main.cpp  matrix.h  vector.h
monom/: CMakeLists.txt  Monom.cpp  Monom.h  Node.h  Polynom.cpp  Polynom.h  main  main.cpp
polynom/: CMakeLists.txt  Monom.h  Node.h  Polynom.h  main.cpp
stack/: CMakeLists.txt  ExpressionChecker.cpp  ExpressionChecker.h  Formula.cpp  Formula.h  Stack.h  Table.h  main  main.cpp  stack.h  table.h
